# manchester-cpp

./: CMakeLists.txt  README.md  main.cpp
include/: decoder.hpp  dif-encoder.hpp  man-decoder.hpp  man-encoder.hpp  timer.h
manchester/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  timer.cpp  timer.h
src/: CMakeLists.txt  decoder.cpp  dif-decoder.cpp  dif-encoder.cpp  encoder.cpp  man-decoder.cpp  man-encoder.cpp  timer.cpp
tests/: CMakeLists.txt  test-decoder.cpp  test-decoder.h  test-dif-decoder.cpp  test-dif-decoder.h  test-dif-encoder.cpp  test-dif-encoder.h  test-encoder.cpp  test-encoder.h  test-man-decoder.cpp  test-man-decoder.h  test-man-encoder.cpp  test-man-encoder.h
